<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_rl_control</name>
  <version>0.0.1</version>
  <description>RL navigation controller (Mode A) for pb_rm_simulation (ROS2 Humble).</description>

  <maintainer email="noreply@example.com">rm_rl_control</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- For included bringup nodes/launch -->
  <exec_depend>pb_rm_simulation</exec_depend>
  <exec_depend>rm_nav_bringup</exec_depend>
  <exec_depend>linefit_ground_segmentation_ros</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

